# WorkAttendance

./: .gitignore  Prueba Tecnica.postman_collection.json  README.md  main.py  pyproject.toml  run_backend.ps1  run_frontend.ps1
Backend/: server.py
Backend/app/: config.py  logger.py
Backend/app/application/: __init__.py
Backend/app/application/commands/: __init__.py
Backend/app/domain/exceptions/: __init__.py  base_domain_exception.py  check_out_without_check_in.py  email_already_exists.py  employee_number_already_exists.py  invalid_employee_number.py  user_not_found.py
Backend/app/domain/repositories/: user_repository.py
Backend/app/infrastructure/inyections/: __init__.py
Backend/app/infrastructure/middlewares/: context_middleware.py  error_middleware.py
Backend_python/app/: dependencies.py
Backend_python/app/application/aggregate/: __init__.py
Backend_python/app/domain/aggregate/: constants.py
Backend_python/app/domain/exceptions/: check_out_before_check_in.py
Backend_python/app/infrastructure/middlewares/: __init__.py
Frontend/: package-lock.json  vite.config.js
Frontend/src/: App.jsx
Frontend/src/actions/: Actions.js  User.js
Frontend/src/actions/helpers/: httpClient.js
Frontend/src/app/login/: layout.jsx  page.jsx
Frontend/src/components/: theme.js
Frontend/src/components/CheckForm/: Check.jsx
Frontend/src/components/LoginForm/: Login.jsx
Frontend/src/components/UserForm/: EditUserForm.jsx  RegisterUserForm.jsx  UserForm.jsx  index.js
Frontend/src/configuration/: Enum.js  amplitude.js  errors.js  index.js
(+64 files in other folders)
