[project]
name = "prueba-tecnica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "motor>=3.7.1",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "pytz>=2026.1.post1",
    "uvicorn[standard]>=0.44.0",
]
